--- a/presentacion.qmd
+++ b/presentacion.qmd
@@ -3,8 +3,11 @@ title: "Welcome to Java"
 format:
   revealjs: 
     theme: [default]
-    parallax-background-image: 'https://images.unsplash.com/photo-1517849845537-4d257902454a'
+    parallax-background-image: https://pixabay.com/get/g054068e2ff9db75877d5e053831d35a2eaf883411e45a4d65d70329be02a6d04e7aeb6ae6d282dfb0e2359aa6fcd3c0f7d367e424d96c7d2240a5e4bfd9098c20df1b8f06dfa3784fdaa01a8258b0d20_640.jpg 
     background-transition: fade
+    parallax-background-size: "100vw 100vh"
+    parallax-background-horizontal: 20
+    parallax-background-vertical: 150
     transition: slide
 ---
 
